Bug 754588 - Set rt->gcPoke when doing xpconnect unrooting (r=mccr8)